--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.1",
     "gulp-minify-css": "^1.2.0",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "rimraf": "^2.4.1"
   }
 }
