--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   },
   "homepage": "https://github.com/pshingavi/cloudbot-workflow#readme",
   "dependencies": {
+    "angular": "^1.4.1",
+    "angular-ui-router": "^0.2.15",
     "bower": "^1.4.1",
+    "browserify": "^10.2.4",
     "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.11.1",
     "gulp-minify-css": "^1.2.0",
+    "gulp-rimraf": "^0.1.1",
     "gulp-uglify": "^1.2.0",
     "rimraf": "^2.4.1"
   }
